--- a/pkg/dyninst/testprogs/testdata/probes/simple.yaml
+++ b/pkg/dyninst/testprogs/testdata/probes/simple.yaml
@@ -43,20 +43,20 @@ probes:
     snapshotsPerSecond: 2
   where:
     methodName: main.inlined
-# - id: mapArg
-#   type: LOG_PROBE
-#   captureSnapshot: true
-#   where:
-#     methodName: main.mapArg
-# - id: bigMapArg
-#   type: LOG_PROBE
-#   captureSnapshot: true
-#   where:
-#     methodName: main.bigMapArg
-# - id: PointerChainArg
-#   type: LOG_PROBE
-#   captureSnapshot: true
-#   where:
-#     methodName: main.PointerChainArg
-#   capture:
-#     maxReferenceDepth: 3
+- id: mapArg
+  type: LOG_PROBE
+  captureSnapshot: true
+  where:
+    methodName: main.mapArg
+- id: bigMapArg
+  type: LOG_PROBE
+  captureSnapshot: true
+  where:
+    methodName: main.bigMapArg
+- id: PointerChainArg
+  type: LOG_PROBE
+  captureSnapshot: true
+  where:
+    methodName: main.PointerChainArg
+  capture:
+    maxReferenceDepth: 3
