--- a/pkg/dyninst/testdata/decoded/sample.yaml
+++ b/pkg/dyninst/testdata/decoded/sample.yaml
@@ -1,3 +1,4 @@
+stackC: '{"captures":{"probe_id":"stackC"},"stack_frames":""}'
 testArrayOfArrays: '{"captures":{"a":[[1,2],[3,4]],"probe_id":"testArrayOfArrays"},"stack_frames":""}'
 testArrayOfArraysOfArrays: '{"captures":{"b":[[[1,2],[3,4]],[[5,6],[7,8]]],"probe_id":"testArrayOfArraysOfArrays"},"stack_frames":""}'
 testArrayOfStrings: '{"captures":{"a":["first","second"],"probe_id":"testArrayOfStrings"},"stack_frames":""}'
