--- a/.gitlab/package_build/include.yml
+++ b/.gitlab/package_build/include.yml
@@ -3,10 +3,10 @@
 
 ---
 .upload_sbom_artifacts:
-  - $S3_CP_CMD $OMNIBUS_PACKAGE_DIR/version-manifest.json $S3_SBOM_STORAGE_URI/$CI_JOB_NAME/version-manifest.json
+  - $S3_CP_CMD $OMNIBUS_PACKAGE_SUBDIR/version-manifest.json $S3_SBOM_STORAGE_URI/$CI_JOB_NAME/version-manifest.json
 
 .upload_sbom_artifacts_windows:
-  - Invoke-Expression "$S3_CP_CMD $OMNIBUS_PACKAGE_DIR\version-manifest.json $S3_SBOM_STORAGE_URI/$CI_JOB_NAME/version-manifest.json"
+  - Invoke-Expression "$S3_CP_CMD $OMNIBUS_PACKAGE_SUBDIR\version-manifest.json $S3_SBOM_STORAGE_URI/$CI_JOB_NAME/version-manifest.json"
   - If ($lastExitCode -ne "0") { throw "Previous command returned $lastExitCode" }
 
 include:
