--- a/.gitlab/trigger_release/agent.yml
+++ b/.gitlab/trigger_release/agent.yml
@@ -72,7 +72,7 @@ generate_windows_gitlab_runner_bump_pr:
       when: never
     - if: $CI_COMMIT_TAG =~ /^[0-9]+\.[0-9]+\.[0-9]+-rc\.[0-9]+$/
   script:
-    # We are using the agent platform auto PR github app to access the ci-platform-machine-images repository (already used for macOS builds)
+    # We are using the agent platform auto PR github app to access the ci-platform-machine-images repository
     - !reference [.setup_github_app_agent_platform_auto_pr]
     - python3 -m pip install "git+https://github.com/DataDog/datadog-agent-dev.git@v$(cat .dda/version)"
     - python3 -m dda self dep sync -f legacy-tasks
@@ -92,7 +92,7 @@ generate_windows_gitlab_runner_bump_pr_manual:
     - if: $CI_COMMIT_TAG =~ /^[0-9]+\.[0-9]+\.[0-9]+-rc\.[0-9]+$/
       when: manual
   script:
-    # We are using the agent platform auto PR github app to access the ci-platform-machine-images repository (already used for macOS builds)
+    # We are using the agent platform auto PR github app to access the ci-platform-machine-images repository
     - !reference [.setup_github_app_agent_platform_auto_pr]
     - python3 -m pip install "git+https://github.com/DataDog/datadog-agent-dev.git@v$(cat .dda/version)"
     - python3 -m dda self dep sync -f legacy-tasks
