Remove unneeded allocation, update testdata
Signed-off-by: grantseltzer <grantseltzer@gmail.com>

--- a/pkg/dyninst/testdata/decoded/sample.yaml
+++ b/pkg/dyninst/testdata/decoded/sample.yaml
@@ -1,3 +1,4 @@
+stackC: '{"captures":{"probe_id":"stackC"},"stack_frames":""}'
 testArrayOfArrays: '{"captures":{"a":[[1,2],[3,4]],"probe_id":"testArrayOfArrays"},"stack_frames":""}'
 testArrayOfArraysOfArrays: '{"captures":{"b":[[[1,2],[3,4]],[[5,6],[7,8]]],"probe_id":"testArrayOfArraysOfArrays"},"stack_frames":""}'
 testArrayOfStrings: '{"captures":{"a":["first","second"],"probe_id":"testArrayOfStrings"},"stack_frames":""}'
@@ -16,10 +17,10 @@ testInt32Array: '{"captures":{"probe_id":"testInt32Array","x":[1,2]},"stack_fram
 testInt64Array: '{"captures":{"probe_id":"testInt64Array","x":[1,2]},"stack_frames":""}'
 testIntArray: '{"captures":{"probe_id":"testIntArray","x":[1,2]},"stack_frames":""}'
 testInterface: '{"captures":{"b":"unimplemented - non-empty interface","probe_id":"testInterface"},"stack_frames":""}'
-testLinkedList: '{"captures":{"a":{"b":{"Address":"","Value":{"b":{"Address":"","Value":{"b":"nil","val":3}},"val":2}},"val":1},"probe_id":"testLinkedList"},"stack_frames":""}'
+testLinkedList: '{"captures":{"a":{"b":{"Address":"","Value":{"b":{"Address":"","Value":{"b":{"Address":""},"val":3}},"val":2}},"val":1},"probe_id":"testLinkedList"},"stack_frames":""}'
 testMapStringToInt: '{"captures":{"m":"unimplemented - map","probe_id":"testMapStringToInt"},"stack_frames":""}'
 testMultipleSimpleParams: '{"captures":{"a":false,"b":42,"c":122,"d":1337,"e":"xyz","probe_id":"testMultipleSimpleParams"},"stack_frames":""}'
-testNilPointer: '{"captures":{"a":1,"probe_id":"testNilPointer","z":"nil"},"stack_frames":""}'
+testNilPointer: '{"captures":{"a":1,"probe_id":"testNilPointer","z":{"Address":""}},"stack_frames":""}'
 testNilSlice: '{"captures":{"probe_id":"testNilSlice","xs":[]},"stack_frames":""}'
 testNilSliceOfStructs: '{"captures":{"a":5,"probe_id":"testNilSliceOfStructs","xs":[]},"stack_frames":""}'
 testNilSliceWithOtherParams: '{"captures":{"a":1,"probe_id":"testNilSliceWithOtherParams","s":[],"x":5},"stack_frames":""}'
@@ -59,4 +60,3 @@ testUint64Array: '{"captures":{"probe_id":"testUint64Array","x":[1,2]},"stack_fr
 testUintArray: '{"captures":{"probe_id":"testUintArray","x":[1,2]},"stack_frames":""}'
 testUintPointer: '{"captures":{"probe_id":"testUintPointer","x":{"Address":"","Value":1}},"stack_frames":""}'
 testUintSlice: '{"captures":{"probe_id":"testUintSlice","u":[1,2,3]},"stack_frames":""}'
-stackC: '{"captures":{"probe_id":"stackC"},"stack_frames":""}'
