--- a/.gitlab/binary_build/windows.yml
+++ b/.gitlab/binary_build/windows.yml
@@ -5,10 +5,11 @@ build_windows_container_entrypoint:
     - !reference [.except_mergequeue]
     - when: on_success
   stage: binary_build
-  tags: ["runner:windows-docker", "windowsversion:1809"]
+  tags: ["windows-v2:2019"]
   needs: ["lint_windows-x64"]
   variables:
     ARCH: "x64"
+    VARIANT: 1809
   script:
     - $ErrorActionPreference = "Stop"
     - '$_instance_id = (iwr  -UseBasicParsing http://169.254.169.254/latest/meta-data/instance-id).content ; Write-Host "Running on instance $($_instance_id)"'
