--- a/.gitlab/integration_test/windows.yml
+++ b/.gitlab/integration_test/windows.yml
@@ -6,6 +6,8 @@
     - when: on_success
   needs: ["go_deps", "go_tools_deps"]
   tags: ["windows-v2:2019"]
+  variables:
+    VARIANT: 1809
   before_script:
     - $vcpkgBlobSaSUrl = (aws ssm get-parameter --region us-east-1 --name $VCPKG_BLOB_SAS_URL_SSM_NAME --with-decryption --query "Parameter.Value" --out text)
   script:
@@ -37,4 +39,3 @@ integration_tests_windows-x64:
   variables:
     PYTHON_RUNTIMES: 3
     ARCH: "x64"
-    VARIANT: 1809
