--- a/pkg/dyninst/testprogs/testdata/probes/sample.yaml
+++ b/pkg/dyninst/testprogs/testdata/probes/sample.yaml
@@ -188,13 +188,13 @@ probes:
 - id: testArrayOfArraysOfArrays
   type: LOG_PROBE
   where:
-    methodName: main.testArrayOfArraysOfArrays
+     methodName: main.testArrayOfArraysOfArrays
   captureSnapshot: true
-- id: testArrayOfStructs
-  type: LOG_PROBE
-  where:
-    methodName: main.testArrayOfStructs
-  captureSnapshot: true
+# - id: testArrayOfStructs
+#   type: LOG_PROBE
+#   where:
+#     methodName: main.testArrayOfStructs
+#   captureSnapshot: true
 - id: testUintSlice
   type: LOG_PROBE
   where:
@@ -275,36 +275,36 @@ probes:
   where:
     methodName: main.testMultipleSimpleParams
   captureSnapshot: true
-- id: testMapStringToInt
-  type: LOG_PROBE
-  where:
-    methodName: main.testMapStringToInt
-  captureSnapshot: true
-- id: testInterface
-  type: LOG_PROBE
-  where:
-    methodName: main.testInterface
-  captureSnapshot: true
-- id: testError
-  type: LOG_PROBE
-  where:
-    methodName: main.testError
-  captureSnapshot: true
-- id: testBigStruct
-  type: LOG_PROBE
-  where:
-    methodName: main.testBigStruct
-  captureSnapshot: true
-- id: stackC
-  type: LOG_PROBE
-  where:
-    methodName: main.stackC
-  captureSnapshot: true
-- id: testChannel
-  type: LOG_PROBE
-  where:
-    methodName: main.testChannel
-  captureSnapshot: true
+# - id: testMapStringToInt
+#   type: LOG_PROBE
+#   where:
+#     methodName: main.testMapStringToInt
+#   captureSnapshot: true
+# - id: testInterface
+#   type: LOG_PROBE
+#   where:
+#     methodName: main.testInterface
+#   captureSnapshot: true
+# - id: testError
+#   type: LOG_PROBE
+#   where:
+#     methodName: main.testError
+#   captureSnapshot: true
+# - id: testBigStruct
+#   type: LOG_PROBE
+#   where:
+#     methodName: main.testBigStruct
+#   captureSnapshot: true
+# - id: stackC
+#   type: LOG_PROBE
+#   where:
+#     methodName: main.stackC
+#   captureSnapshot: true
+# - id: testChannel
+#   type: LOG_PROBE
+#   where:
+#     methodName: main.testChannel
+#   captureSnapshot: true
 - id: testLinkedList
   type: LOG_PROBE
   where:
