--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1288,17 +1288,9 @@ test_api:
       curl -OL "binaries.ddbuild.io/dd-source/authanywhere/LATEST/authanywhere-linux-${AAA}"
       mv "authanywhere-linux-${AAA}" /bin/authanywhere
       chmod +x /bin/authanywhere
-
-    - |
-      curl https://agent-ci-api.us1.staging.dog/internal/agent-ci-api/hello -w "%{http_code}\n" -H "$(authanywhere --audience rapid-agent-devx)" -H "X-DdOrigin: ${CI_JOB_URL:-curl-authanywhere}" || true
-    - echo
-
     - |
       curl https://agent-ci-api.us1.ddbuild.io/internal/agent-ci-api/hello -w "%{http_code}\n" -H "$(authanywhere --audience rapid-agent-devx)" -H "X-DdOrigin: ${CI_JOB_URL:-curl-authanywhere}" || true
-
     - |
       python3 -m pip install "git+https://github.com/DataDog/datadog-agent-dev.git@v$(cat .dda/version)"
       dda self dep sync -f legacy-tasks
-    - dda inv -- -e api hello --env staging || true
-    - dda inv -- -e api hello --env prod || true
-
+    - dda inv -- -e api hello --env prod
