--- a/.gitlab/container_build/docker_linux.yml
+++ b/.gitlab/container_build/docker_linux.yml
@@ -352,60 +352,50 @@ docker_build_cluster_agent_fips_arm64:
       artifacts: true
 
 # build the cws-instrumentation image
-docker_build_cws_instrumentation_amd64:
-  extends: [.docker_build_job_definition, .docker_build_amd64]
+.docker_build_cws_instrumentation:
+  extends: .docker_build_job_definition
   rules:
     - !reference [.except_mergequeue]
     - when: on_success
+  variables:
+    IMAGE: registry.ddbuild.io/ci/datadog-agent/cws-instrumentation
+    BUILD_CONTEXT: Dockerfiles/cws-instrumentation
+  before_script:
+    - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.${ARCH} $BUILD_CONTEXT/
+
+docker_build_cws_instrumentation_amd64:
+  extends: [.docker_build_cws_instrumentation, .docker_build_amd64]
   needs:
     - job: cws_instrumentation-build_amd64
       artifacts: true
-  variables:
-    IMAGE: registry.ddbuild.io/ci/datadog-agent/cws-instrumentation
-    BUILD_CONTEXT: Dockerfiles/cws-instrumentation
-  before_script:
-    - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.${ARCH} $BUILD_CONTEXT/
 
 docker_build_cws_instrumentation_arm64:
-  extends: [.docker_build_job_definition, .docker_build_arm64]
-  rules:
-    - !reference [.except_mergequeue]
-    - when: on_success
+  extends: [.docker_build_cws_instrumentation, .docker_build_arm64]
   needs:
     - job: cws_instrumentation-build_arm64
       artifacts: true
-  variables:
-    IMAGE: registry.ddbuild.io/ci/datadog-agent/cws-instrumentation
-    BUILD_CONTEXT: Dockerfiles/cws-instrumentation
-  before_script:
-    - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.${ARCH} $BUILD_CONTEXT/
 
 # build the dogstatsd image
-docker_build_dogstatsd_amd64:
-  extends: [.docker_build_job_definition, .docker_build_amd64, .docker_build_s3]
+.docker_build_dogstatsd:
+  extends: [.docker_build_job_definition, .docker_build_s3]
   rules:
     - !reference [.except_mergequeue]
     - when: on_success
+  variables:
+    IMAGE: registry.ddbuild.io/ci/datadog-agent/dogstatsd
+    BUILD_CONTEXT: Dockerfiles/dogstatsd/alpine
+    CACHE_TARGET: release-base
+
+docker_build_dogstatsd_amd64:
+  extends: [.docker_build_dogstatsd, .docker_build_amd64, .docker_build_s3]
   needs:
     - job: build_dogstatsd_static-binary_x64
       artifacts: false
-  variables:
-    IMAGE: registry.ddbuild.io/ci/datadog-agent/dogstatsd
-    BUILD_CONTEXT: Dockerfiles/dogstatsd/alpine
-    CACHE_TARGET: release-base
   timeout: 20m
 
-# build the dogstatsd image
 docker_build_dogstatsd_arm64:
-  extends: [.docker_build_job_definition, .docker_build_arm64, .docker_build_s3]
-  rules:
-    - !reference [.except_mergequeue]
-    - when: on_success
+  extends: [.docker_build_dogstatsd, .docker_build_arm64, .docker_build_s3]
   needs:
     - job: build_dogstatsd_static-binary_arm64
       artifacts: false
-  variables:
-    IMAGE: registry.ddbuild.io/ci/datadog-agent/dogstatsd
-    BUILD_CONTEXT: Dockerfiles/dogstatsd/alpine
-    CACHE_TARGET: release-base
   timeout: 20m
