--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -56,9 +56,13 @@
       else
         AAA="arm64";
       fi;
-      curl -OL "binaries.ddbuild.io/dd-source/authanywhere/LATEST/authanywhere-linux-${AAA}"
-      mv "authanywhere-linux-${AAA}" /bin/authanywhere
-      chmod +x /bin/authanywhere
+      curl -OL "binaries.ddbuild.io/dd-source/authanywhere/LATEST/authanywhere-linux-${AAA}" || exit $?
+      mv "authanywhere-linux-${AAA}" /bin/authanywhere || exit $?
+      chmod +x /bin/authanywhere || exit $?
+    # TODO
+    - |
+      curl https://agent-ci-api.us1.ddbuild.io/internal/agent-ci-api/hello -w "%{http_code}\n" -H "$(authanywhere --audience rapid-agent-devx)" -H "X-DdOrigin: ${CI_JOB_URL:-curl-authanywhere}" || true
+    - dda inv -- -e api hello --env prod
   variables:
     SHOULD_RUN_IN_FLAKES_FINDER: "true"
     KUBERNETES_MEMORY_REQUEST: 12Gi
