fix: use stable images for windows

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -191,8 +191,8 @@ variables:
   CI_IMAGE_RPM_ARM64_SUFFIX: "_test_only"
   CI_IMAGE_RPM_ARMHF: v68978153-f422a37c
   CI_IMAGE_RPM_ARMHF_SUFFIX: "_test_only"
-  CI_IMAGE_WIN_LTSC2022_X64: v68959162-772c5b2a
-  CI_IMAGE_WIN_LTSC2022_X64_SUFFIX: "_test_only"
+  CI_IMAGE_WIN_LTSC2022_X64: v67503855-0c93f922
+  CI_IMAGE_WIN_LTSC2022_X64_SUFFIX: ""
 
   DATADOG_AGENT_EMBEDDED_PATH: /opt/datadog-agent/embedded
   DEB_GPG_KEY_ID: c0962c7d
