Update e2e commit hash for latest changes

--- a/.gitlab/common/test_infra_version.yml
+++ b/.gitlab/common/test_infra_version.yml
@@ -5,5 +5,5 @@
 
 ---
 variables:
-  TEST_INFRA_DEFINITIONS_BUILDIMAGES: 665b9da3073a
-  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: -dev
+  TEST_INFRA_DEFINITIONS_BUILDIMAGES: 31001f847e89
+  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: ''
