--- a/.gitlab/common/test_infra_version.yml
+++ b/.gitlab/common/test_infra_version.yml
@@ -6,4 +6,4 @@
 ---
 variables:
   TEST_INFRA_DEFINITIONS_BUILDIMAGES: 31001f847e89
-  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: ''
+  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: -dev
