Update lading to 0.26, update and add RD experiments
This commit updates lading to the latest release and updates the existing
otlp-ingest-metrics regression detector experiment to make use of the
new configuration options present in that release. Likewise, I am adding
an experiment specifically for DDOT.

REF SMPTNG-659

Signed-off-by: Brian L. Troutwine <brian.troutwine@datadoghq.com>

--- a/test/regression/cases/ddot_ingest_metrics/datadog-agent/datadog.yaml
+++ b/test/regression/cases/ddot_ingest_metrics/datadog-agent/datadog.yaml
@@ -11,8 +11,6 @@ logs_config:
   logs_no_ssl: true
   force_use_http: true
 
-log_level: info
-
 dd_url: http://127.0.0.1:9091
 process_config:
   process_dd_url: http://localhost:9093
@@ -21,23 +19,14 @@ telemetry:
   checks: '*'
 
 otelcollector:
-  enabled: false
+  converter:
+    enabled: true
+  enabled: true
+  extension_timeout: 0
+  flare:
+    timeout: 60
 
 agent_ipc:
   config_refresh_interval: 60
   host: localhost
-  port: 5678
-
-otlp_config:
-  receiver:
-    protocols:
-      grpc:
-        endpoint: 0.0.0.0:4317
-      http:
-        endpoint: 0.0.0.0:4318
-  metrics:
-    enabled: true
-  traces:
-    enabled: false
-  logs:
-    enabled: false
+  port: 5009
