give otlp_ingest_metrics more memory, replace ddot_metrics
Signed-off-by: Brian L. Troutwine <brian.troutwine@datadoghq.com>

--- a/test/regression/cases/ddot_metrics/datadog-agent/datadog.yaml
+++ b/test/regression/cases/ddot_metrics/datadog-agent/datadog.yaml
@@ -17,3 +17,16 @@ process_config:
 telemetry:
   enabled: true
   checks: '*'
+
+otelcollector:
+  converter:
+    enabled: true
+  enabled: true
+  extension_timeout: 0
+  flare:
+    timeout: 60
+
+agent_ipc:
+  config_refresh_interval: 60
+  host: localhost
+  port: 5009
