--- a/test/regression/cases/ddot_metrics/experiment.yaml
+++ b/test/regression/cases/ddot_metrics/experiment.yaml
@@ -22,8 +22,8 @@ target:
     DD_INTERNAL_PROFILING_UNIX_SOCKET: /smp-host/apm.socket
 
     # tags
-    DD_INTERNAL_PROFILING_EXTRA_TAGS: experiment:ddot_ingest_metrics
-    DD_SYSTEM_PROBE_CONFIG_INTERNAL_PROFILING_EXTRA_TAGS: experiment:ddot_ingest_metrics
+    DD_INTERNAL_PROFILING_EXTRA_TAGS: experiment:ddot_metrics
+    DD_SYSTEM_PROBE_CONFIG_INTERNAL_PROFILING_EXTRA_TAGS: experiment:ddot_metrics
 
     DD_INTERNAL_PROFILING_BLOCK_PROFILE_RATE: 10000
     DD_INTERNAL_PROFILING_DELTA_PROFILES: true
