--- a/test/new-e2e/tests/otel/otel-agent/testdata/no-dd-exporter-provided-config.yml
+++ b/test/new-e2e/tests/otel/otel-agent/testdata/no-dd-exporter-provided-config.yml
@@ -44,7 +44,6 @@ exporters:
     sending_queue:
       batch:
       block_on_overflow: false
-      blocking: false
       enabled: true
       num_consumers: 10
       queue_size: 1000
@@ -72,8 +71,8 @@ processors: {}
 receivers:
   otlp:
     protocols:
-      grpc: {}
-      http: {}
+      grpc: null
+      http: null
 service:
   pipelines:
     logs:
