dyninst/ir,irgen: track probe issues explicitly (#38411)

--- a/pkg/dyninst/irgen/testdata/snapshot/simple.arch=arm64,toolchain=go1.24.3.yaml
+++ b/pkg/dyninst/irgen/testdata/snapshot/simple.arch=arm64,toolchain=go1.24.3.yaml
@@ -1,92 +1,19 @@
 ID: 1
 Probes:
-    - id: intArg
+    - id: PointerChainArg
       version: 0
       type: LOG_PROBE
-      where: {methodName: main.intArg}
+      where: {methodName: main.PointerChainArg}
+      capture:
+        maxReferenceDepth: 3
+        maxFieldCount: 0
+        maxCollectionSize: 0
       captureSnapshot: true
-      subprogram: {subprogram: 3}
+      subprogram: {subprogram: 2}
       events:
-        - ID: 1
-          Type: 53 EventRootType Probe[main.intArg]
-          InjectionPoints: [{PC: 741932, Frameless: false}]
-          Condition: null
-    - id: stringArg
-      version: 0
-      type: LOG_PROBE
-      where: {methodName: main.stringArg}
-      captureSnapshot: true
-      subprogram: {subprogram: 4}
-      events:
-        - ID: 2
-          Type: 54 EventRootType Probe[main.stringArg]
-          InjectionPoints: [{PC: 742044, Frameless: false}]
-          Condition: null
-    - id: intSliceArg
-      version: 0
-      type: LOG_PROBE
-      where: {methodName: main.intSliceArg}
-      captureSnapshot: true
-      subprogram: {subprogram: 5}
-      events:
-        - ID: 3
-          Type: 55 EventRootType Probe[main.intSliceArg]
-          InjectionPoints: [{PC: 742172, Frameless: false}]
-          Condition: null
-    - id: intArrayArg
-      version: 0
-      type: LOG_PROBE
-      where: {methodName: main.intArrayArg}
-      captureSnapshot: true
-      subprogram: {subprogram: 6}
-      events:
-        - ID: 4
-          Type: 56 EventRootType Probe[main.intArrayArg]
-          InjectionPoints: [{PC: 742300, Frameless: false}]
-          Condition: null
-    - id: stringSliceArg
-      version: 0
-      type: LOG_PROBE
-      where: {methodName: main.stringSliceArg}
-      captureSnapshot: true
-      subprogram: {subprogram: 7}
-      events:
-        - ID: 5
-          Type: 57 EventRootType Probe[main.stringSliceArg]
-          InjectionPoints: [{PC: 742428, Frameless: false}]
-          Condition: null
-    - id: stringArrayArg
-      version: 0
-      type: LOG_PROBE
-      where: {methodName: main.stringArrayArg}
-      captureSnapshot: true
-      subprogram: {subprogram: 8}
-      events:
-        - ID: 6
-          Type: 58 EventRootType Probe[main.stringArrayArg]
-          InjectionPoints: [{PC: 742556, Frameless: false}]
-          Condition: null
-    - id: intArrayArgFrameless
-      version: 0
-      type: LOG_PROBE
-      where: {methodName: main.stringArrayArgFrameless}
-      captureSnapshot: true
-      subprogram: {subprogram: 9}
-      events:
-        - ID: 7
-          Type: 59 EventRootType Probe[main.stringArrayArgFrameless]
-          InjectionPoints: [{PC: 742672, Frameless: true}]
-          Condition: null
-    - id: mapArg
-      version: 0
-      type: LOG_PROBE
-      where: {methodName: main.mapArg}
-      captureSnapshot: true
-      subprogram: {subprogram: 10}
-      events:
-        - ID: 8
-          Type: 60 EventRootType Probe[main.mapArg]
-          InjectionPoints: [{PC: 742892, Frameless: false}]
+        - ID: 11
+          Type: 63 EventRootType Probe[main.PointerChainArg]
+          InjectionPoints: [{PC: 741836, Frameless: true}]
           Condition: null
     - id: bigMapArg
       version: 0
@@ -115,20 +42,93 @@ Probes:
             - PC: 741356
               Frameless: true
           Condition: null
-    - id: PointerChainArg
+    - id: intArg
       version: 0
       type: LOG_PROBE
-      where: {methodName: main.PointerChainArg}
-      capture:
-        maxReferenceDepth: 3
-        maxFieldCount: 0
-        maxCollectionSize: 0
+      where: {methodName: main.intArg}
       captureSnapshot: true
-      subprogram: {subprogram: 2}
+      subprogram: {subprogram: 3}
       events:
-        - ID: 11
-          Type: 63 EventRootType Probe[main.PointerChainArg]
-          InjectionPoints: [{PC: 741836, Frameless: true}]
+        - ID: 1
+          Type: 53 EventRootType Probe[main.intArg]
+          InjectionPoints: [{PC: 741932, Frameless: false}]
+          Condition: null
+    - id: intArrayArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.intArrayArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 6}
+      events:
+        - ID: 4
+          Type: 56 EventRootType Probe[main.intArrayArg]
+          InjectionPoints: [{PC: 742300, Frameless: false}]
+          Condition: null
+    - id: intArrayArgFrameless
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.stringArrayArgFrameless}
+      captureSnapshot: true
+      subprogram: {subprogram: 9}
+      events:
+        - ID: 7
+          Type: 59 EventRootType Probe[main.stringArrayArgFrameless]
+          InjectionPoints: [{PC: 742672, Frameless: true}]
+          Condition: null
+    - id: intSliceArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.intSliceArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 5}
+      events:
+        - ID: 3
+          Type: 55 EventRootType Probe[main.intSliceArg]
+          InjectionPoints: [{PC: 742172, Frameless: false}]
+          Condition: null
+    - id: mapArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.mapArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 10}
+      events:
+        - ID: 8
+          Type: 60 EventRootType Probe[main.mapArg]
+          InjectionPoints: [{PC: 742892, Frameless: false}]
+          Condition: null
+    - id: stringArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.stringArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 4}
+      events:
+        - ID: 2
+          Type: 54 EventRootType Probe[main.stringArg]
+          InjectionPoints: [{PC: 742044, Frameless: false}]
+          Condition: null
+    - id: stringArrayArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.stringArrayArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 8}
+      events:
+        - ID: 6
+          Type: 58 EventRootType Probe[main.stringArrayArg]
+          InjectionPoints: [{PC: 742556, Frameless: false}]
+          Condition: null
+    - id: stringSliceArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.stringSliceArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 7}
+      events:
+        - ID: 5
+          Type: 57 EventRootType Probe[main.stringSliceArg]
+          InjectionPoints: [{PC: 742428, Frameless: false}]
           Condition: null
 Subprograms:
     - ID: 3
@@ -953,3 +953,4 @@ Types:
                   Offset: 0
                   ByteSize: 8
 MaxTypeID: 63
+Issues: []
