--- a/pkg/dyninst/actuator/testdata/snapshot/shutdown_with_active_programs.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/shutdown_with_active_programs.yaml
@@ -48,7 +48,6 @@ state:
 ---
 event: !loaded {program_id: 1}
 effects:
-  - !register-program-with-dispatcher {program_id: 1}
   - !attach-to-process {executable: /usr/bin/test@0.0m0.0, process_id: 1001, program_id: 1}
 state:
   currently_loading: 1 -> <nil>
@@ -104,7 +103,7 @@ state:
 ---
 event: !detached {program_id: 1, process_id: 1001}
 effects:
-  - !unregister-program-with-dispatcher {program_id: 1}
+  - !close-sink {program_id: 1}
 state:
   currently_loading: "2"
   queued_programs: '[]'
