--- a/pkg/dyninst/actuator/testdata/snapshot/attaching_failure.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/attaching_failure.yaml
@@ -27,7 +27,6 @@ state:
 ---
 event: !loaded {program_id: 1}
 effects:
-  - !register-program-with-dispatcher {program_id: 1}
   - !attach-to-process {executable: /usr/bin/test@0.0m0.0, process_id: 1001, program_id: 1}
 state:
   currently_loading: 1 -> <nil>
@@ -39,7 +38,7 @@ state:
 ---
 event: !attaching-failed {program_id: 1, process_id: 1001, error: "eBPF attaching failed"}
 effects:
-  - !unregister-program-with-dispatcher {program_id: 1}
+  - !close-sink {program_id: 1}
 state:
   currently_loading: <nil>
   queued_programs: '[]'
