--- a/pkg/dyninst/actuator/testdata/snapshot/probe_update_during_attaching.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/probe_update_during_attaching.yaml
@@ -36,7 +36,6 @@ state:
 ---
 event: !loaded {program_id: 1}
 effects:
-  - !register-program-with-dispatcher {program_id: 1}
   - !attach-to-process {executable: /usr/bin/test@0.0m0.0, process_id: 1001, program_id: 1}
 state:
   currently_loading: 1 -> <nil>
@@ -73,7 +72,7 @@ state:
 ---
 event: !detached {program_id: 1, process_id: 1001}
 effects:
-  - !unregister-program-with-dispatcher {program_id: 1}
+  - !close-sink {program_id: 1}
   - !spawn-bpf-loading {executable: /usr/bin/test@0.0m0.0, probes: [probe1], program_id: 2}
 state:
   currently_loading: <nil> -> 2
@@ -86,7 +85,6 @@ state:
 ---
 event: !loaded {program_id: 2}
 effects:
-  - !register-program-with-dispatcher {program_id: 2}
   - !attach-to-process {executable: /usr/bin/test@0.0m0.0, process_id: 1001, program_id: 2}
 state:
   currently_loading: 2 -> <nil>
